// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`built-in plugins compiles mods 1`] = `
{
  "_internal": {
    "modResults": {
      "ios": {
        "splashScreenStoryboard": {
          "document": {
            "$": {
              "colorMatched": "YES",
              "initialViewController": "EXPO-VIEWCONTROLLER-1",
              "launchScreen": "YES",
              "propertyAccessControl": "none",
              "targetRuntime": "iOS.CocoaTouch",
              "toolsVersion": "16096",
              "type": "com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB",
              "useAutolayout": "YES",
              "useSafeAreas": "YES",
              "useTraitCollections": "YES",
              "version": "3.0",
            },
            "dependencies": [
              {
                "capability": [
                  {
                    "$": {
                      "minToolsVersion": "9.0",
                      "name": "Safe area layout guides",
                    },
                  },
                  {
                    "$": {
                      "minToolsVersion": "8.0",
                      "name": "documents saved in the Xcode 8 format",
                    },
                  },
                ],
                "deployment": [
                  {
                    "$": {
                      "identifier": "iOS",
                    },
                  },
                ],
                "plugIn": [
                  {
                    "$": {
                      "identifier": "com.apple.InterfaceBuilder.IBCocoaTouchPlugin",
                      "version": "16087",
                    },
                  },
                ],
              },
            ],
            "device": [
              {
                "$": {
                  "appearance": "light",
                  "id": "retina5_5",
                  "orientation": "portrait",
                },
              },
            ],
            "resources": [
              {
                "image": [
                  {
                    "$": {
                      "height": "1",
                      "name": "SplashScreenBackground",
                      "width": "1",
                    },
                  },
                ],
              },
            ],
            "scenes": [
              {
                "scene": [
                  {
                    "$": {
                      "sceneID": "EXPO-SCENE-1",
                    },
                    "objects": [
                      {
                        "placeholder": [
                          {
                            "$": {
                              "id": "EXPO-PLACEHOLDER-1",
                              "placeholderIdentifier": "IBFirstResponder",
                              "sceneMemberID": "firstResponder",
                              "userLabel": "First Responder",
                            },
                          },
                        ],
                        "viewController": [
                          {
                            "$": {
                              "id": "EXPO-VIEWCONTROLLER-1",
                              "sceneMemberID": "viewController",
                              "storyboardIdentifier": "SplashScreenViewController",
                            },
                            "view": [
                              {
                                "$": {
                                  "contentMode": "scaleToFill",
                                  "id": "EXPO-ContainerView",
                                  "insetsLayoutMarginsFromSafeArea": "NO",
                                  "key": "view",
                                  "userInteractionEnabled": "NO",
                                  "userLabel": "ContainerView",
                                },
                                "autoresizingMask": [
                                  {
                                    "$": {
                                      "flexibleMaxX": "YES",
                                      "flexibleMaxY": "YES",
                                      "key": "autoresizingMask",
                                    },
                                  },
                                ],
                                "constraints": [
                                  {
                                    "constraint": [
                                      {
                                        "$": {
                                          "firstAttribute": "top",
                                          "firstItem": "EXPO-SplashScreenBackground",
                                          "id": "1gX-mQ-vu6",
                                          "secondAttribute": "top",
                                          "secondItem": "EXPO-ContainerView",
                                        },
                                      },
                                      {
                                        "$": {
                                          "firstAttribute": "leading",
                                          "firstItem": "EXPO-SplashScreenBackground",
                                          "id": "6tX-OG-Sck",
                                          "secondAttribute": "leading",
                                          "secondItem": "EXPO-ContainerView",
                                        },
                                      },
                                      {
                                        "$": {
                                          "firstAttribute": "trailing",
                                          "firstItem": "EXPO-SplashScreenBackground",
                                          "id": "ABX-8g-7v4",
                                          "secondAttribute": "trailing",
                                          "secondItem": "EXPO-ContainerView",
                                        },
                                      },
                                      {
                                        "$": {
                                          "firstAttribute": "bottom",
                                          "firstItem": "EXPO-SplashScreenBackground",
                                          "id": "jkI-2V-eW5",
                                          "secondAttribute": "bottom",
                                          "secondItem": "EXPO-ContainerView",
                                        },
                                      },
                                      {
                                        "$": {
                                          "firstAttribute": "top",
                                          "firstItem": "EXPO-SplashScreen",
                                          "id": "2VS-Uz-0LU",
                                          "secondAttribute": "top",
                                          "secondItem": "EXPO-ContainerView",
                                        },
                                      },
                                      {
                                        "$": {
                                          "firstAttribute": "leading",
                                          "firstItem": "EXPO-SplashScreen",
                                          "id": "LhH-Ei-DKo",
                                          "secondAttribute": "leading",
                                          "secondItem": "EXPO-ContainerView",
                                        },
                                      },
                                      {
                                        "$": {
                                          "firstAttribute": "trailing",
                                          "firstItem": "EXPO-SplashScreen",
                                          "id": "I6l-TP-6fn",
                                          "secondAttribute": "trailing",
                                          "secondItem": "EXPO-ContainerView",
                                        },
                                      },
                                      {
                                        "$": {
                                          "firstAttribute": "bottom",
                                          "firstItem": "EXPO-SplashScreen",
                                          "id": "nbp-HC-eaG",
                                          "secondAttribute": "bottom",
                                          "secondItem": "EXPO-ContainerView",
                                        },
                                      },
                                    ],
                                  },
                                ],
                                "rect": [
                                  {
                                    "$": {
                                      "height": "736",
                                      "key": "frame",
                                      "width": "414",
                                      "x": "0.0",
                                      "y": "0.0",
                                    },
                                  },
                                ],
                                "subviews": [
                                  {
                                    "imageView": [
                                      {
                                        "$": {
                                          "contentMode": "scaleAspectFill",
                                          "horizontalHuggingPriority": "251",
                                          "id": "EXPO-SplashScreenBackground",
                                          "image": "SplashScreenBackground",
                                          "insetsLayoutMarginsFromSafeArea": "NO",
                                          "translatesAutoresizingMaskIntoConstraints": "NO",
                                          "userInteractionEnabled": "NO",
                                          "userLabel": "SplashScreenBackground",
                                          "verticalHuggingPriority": "251",
                                        },
                                        "rect": [
                                          {
                                            "$": {
                                              "height": "736",
                                              "key": "frame",
                                              "width": "414",
                                              "x": "0.0",
                                              "y": "0.0",
                                            },
                                          },
                                        ],
                                      },
                                    ],
                                  },
                                ],
                                "viewLayoutGuide": [
                                  {
                                    "$": {
                                      "id": "Rmq-lb-GrQ",
                                      "key": "safeArea",
                                    },
                                  },
                                ],
                              },
                            ],
                          },
                        ],
                      },
                    ],
                    "point": [
                      {
                        "$": {
                          "key": "canvasLocation",
                          "x": "140.625",
                          "y": "129.4921875",
                        },
                      },
                    ],
                  },
                ],
              },
            ],
          },
        },
      },
    },
    "pluginHistory": {
      "expo-ads-admob": {
        "name": "expo-ads-admob",
        "version": "UNVERSIONED",
      },
      "expo-apple-authentication": {
        "name": "expo-apple-authentication",
        "version": "UNVERSIONED",
      },
      "expo-contacts": {
        "name": "expo-contacts",
        "version": "UNVERSIONED",
      },
      "expo-document-picker": {
        "name": "expo-document-picker",
        "version": "UNVERSIONED",
      },
      "expo-navigation-bar": {
        "name": "expo-navigation-bar",
        "version": "UNVERSIONED",
      },
      "expo-notifications": {
        "name": "expo-notifications",
        "version": "UNVERSIONED",
      },
      "expo-splash-screen": {
        "name": "expo-splash-screen",
        "version": "UNVERSIONED",
      },
      "expo-system-ui": {
        "name": "expo-system-ui",
        "version": "UNVERSIONED",
      },
      "expo-updates": {
        "name": "expo-updates",
        "version": "UNVERSIONED",
      },
      "react-native-maps": {
        "name": "react-native-maps",
        "version": "UNVERSIONED",
      },
    },
    "projectRoot": "/app",
  },
  "android": {
    "adaptiveIcon": {
      "backgroundImage": "./icons/background.png",
      "foregroundImage": "./icons/foreground.png",
    },
    "allowBackup": true,
    "backgroundColor": "#ff0000",
    "blockedPermissions": [
      "android.permission.RECORD_AUDIO",
      "android.permission.ACCESS_FINE_LOCATION",
    ],
    "config": {
      "branch": {
        "apiKey": "MY_BRANCH_ANDROID_KEY",
      },
      "googleMaps": {
        "apiKey": "MY_GOOGLE_MAPS_ANDROID_KEY",
      },
      "googleMobileAdsAppId": "MY_GOOGLE_MOBILE_ADS_APP_ID",
      "googleMobileAdsAutoInit": true,
    },
    "googleServicesFile": "./config/google-services.json",
    "intentFilters": [
      {
        "action": "VIEW",
        "autoVerify": true,
        "category": [
          "BROWSABLE",
          "DEFAULT",
        ],
        "data": {
          "host": "*.expo.dev",
          "scheme": "https",
        },
      },
    ],
    "package": "com.bacon.todo",
    "permissions": [
      "android.permission.CAMERA",
      "com.sec.android.provider.badge.permission.WRITE",
      "android.permission.ACCESS_COARSE_LOCATION",
    ],
    "softwareKeyboardLayoutMode": "pan",
    "splash": {
      "backgroundColor": "#ff00ff",
      "dark": {
        "backgroundColor": "#00ffff",
      },
    },
    "userInterfaceStyle": "light",
    "versionCode": 6,
  },
  "androidNavigationBar": {
    "backgroundColor": "#ff0000",
    "barStyle": "dark-content",
    "visible": "sticky-immersive",
  },
  "androidStatusBar": {
    "backgroundColor": "#000FFF",
    "barStyle": "light-content",
    "hidden": false,
    "translucent": true,
  },
  "backgroundColor": "orange",
  "description": "my app is great because it uses expo",
  "developmentClient": {
    "silentLaunch": true,
  },
  "facebookAdvertiserIDCollectionEnabled": true,
  "facebookAppId": "1234567890",
  "facebookAutoInitEnabled": true,
  "facebookAutoLogAppEventsEnabled": true,
  "facebookDisplayName": "my-fb-test-app",
  "facebookScheme": "fb1234567890",
  "githubUrl": "https://github.com/expo/expo",
  "ios": {
    "accessesContactNotes": true,
    "appStoreUrl": "https://itunes.apple.com/us/app/pillar-valley/id1336398804?ls=1&mt=8",
    "associatedDomains": [
      "applinks:https://pillarvalley.netlify.app",
    ],
    "backgroundColor": "#ff0000",
    "buildNumber": "6.5.0",
    "bundleIdentifier": "com.bacon.todo",
    "config": {
      "googleMapsApiKey": "TEST_googleMapsApiKey",
      "googleMobileAdsAppId": "TEST_googleMobileAdsAppId",
      "googleMobileAdsAutoInit": true,
      "usesNonExemptEncryption": true,
    },
    "entitlements": {
      "com.apple.developer.associated-domains": [
        "applinks:https://pillarvalley.netlify.app",
      ],
      "com.apple.developer.contacts.notes": true,
      "foo": "bar",
    },
    "googleServicesFile": "./config/GoogleService-Info.plist",
    "infoPlist": {
      "CADisableMinimumFrameDurationOnPhone": true,
      "CFBundleDevelopmentRegion": "$(DEVELOPMENT_LANGUAGE)",
      "CFBundleDisplayName": "my cool app",
      "CFBundleExecutable": "$(EXECUTABLE_NAME)",
      "CFBundleIdentifier": "$(PRODUCT_BUNDLE_IDENTIFIER)",
      "CFBundleInfoDictionaryVersion": "6.0",
      "CFBundleName": "$(PRODUCT_NAME)",
      "CFBundlePackageType": "$(PRODUCT_BUNDLE_PACKAGE_TYPE)",
      "CFBundleShortVersionString": "1.0.0",
      "CFBundleSignature": "????",
      "CFBundleURLTypes": [
        {
          "CFBundleURLSchemes": [
            "my-app-redirect",
            "com.bacon.todo",
          ],
        },
        {
          "CFBundleURLSchemes": [
            "com.googleusercontent.apps.1234567890123-abcdef",
          ],
        },
      ],
      "CFBundleVersion": "6.5.0",
      "GADApplicationIdentifier": "TEST_googleMobileAdsAppId",
      "GMSApiKey": "TEST_googleMapsApiKey",
      "ITSAppUsesNonExemptEncryption": true,
      "LSRequiresIPhoneOS": true,
      "NSAppTransportSecurity": {
        "NSAllowsArbitraryLoads": false,
        "NSAllowsLocalNetworking": true,
      },
      "NSLocationWhenInUseUsageDescription": "Allow $(PRODUCT_NAME) to access your location",
      "UILaunchStoryboardName": "SplashScreen",
      "UIRequiredDeviceCapabilities": [
        "arm64",
      ],
      "UIRequiresFullScreen": true,
      "UIStatusBarStyle": "UIStatusBarStyleDefault",
      "UISupportedInterfaceOrientations": [
        "UIInterfaceOrientationPortrait",
        "UIInterfaceOrientationPortraitUpsideDown",
        "UIInterfaceOrientationLandscapeLeft",
        "UIInterfaceOrientationLandscapeRight",
      ],
      "UIUserInterfaceStyle": "Automatic",
      "UIViewControllerBasedStatusBarAppearance": false,
      "bar": {
        "val": [
          "foo",
        ],
      },
    },
    "isTabletOnly": false,
    "requireFullScreen": true,
    "supportsTablet": true,
    "userInterfaceStyle": "automatic",
    "usesAppleSignIn": true,
    "usesIcloudStorage": true,
  },
  "locales": {
    "en": "./locales/en-US.json",
    "es": {
      "foo": "el bar",
    },
  },
  "name": "my cool app",
  "notification": {
    "androidCollapsedTitle": "#{unread_notifications} new interactions",
    "androidMode": "collapse",
    "color": "green",
    "icon": "./icons/notification-icon.png",
    "iosDisplayInForeground": true,
  },
  "orientation": "default",
  "packagerOpts": {
    "extraThing": true,
  },
  "platforms": [
    "android",
    "ios",
    "web",
  ],
  "primaryColor": "#fff000",
  "runtimeVersion": "1.0",
  "scheme": "my-app-redirect",
  "slug": "mycoolapp",
  "splash": {
    "backgroundColor": "#ff00ff",
  },
  "updates": {
    "checkAutomatically": "ON_ERROR_RECOVERY",
    "enabled": true,
    "fallbackToCacheTimeout": 650,
  },
  "userInterfaceStyle": "dark",
  "version": "1.0.0",
}
`;

exports[`built-in plugins introspects mods 1`] = `
{
  "_internal": {
    "modResults": {
      "android": {
        "colors": {
          "resources": {
            "color": [
              {
                "$": {
                  "name": "splashscreen_background",
                },
                "_": "#ff00ff",
              },
              {
                "$": {
                  "name": "colorPrimary",
                },
                "_": "#fff000",
              },
              {
                "$": {
                  "name": "colorPrimaryDark",
                },
                "_": "#000FFF",
              },
              {
                "$": {
                  "name": "navigationBarColor",
                },
                "_": "#ff0000",
              },
              {
                "$": {
                  "name": "activityBackground",
                },
                "_": "#ff0000",
              },
              {
                "$": {
                  "name": "notification_icon_color",
                },
                "_": "green",
              },
            ],
          },
        },
        "colorsNight": {
          "resources": {
            "color": [
              {
                "$": {
                  "name": "splashscreen_background",
                },
                "_": "#00ffff",
              },
            ],
          },
        },
        "gradleProperties": [
          {
            "type": "comment",
            "value": "Project-wide Gradle settings.",
          },
          {
            "type": "empty",
          },
          {
            "type": "comment",
            "value": "IDE (e.g. Android Studio) users:",
          },
          {
            "type": "comment",
            "value": "Gradle settings configured through the IDE *will override*",
          },
          {
            "type": "comment",
            "value": "any settings specified in this file.",
          },
          {
            "type": "empty",
          },
          {
            "type": "comment",
            "value": "For more details on how to configure your build environment visit",
          },
          {
            "type": "comment",
            "value": "http://www.gradle.org/docs/current/userguide/build_environment.html",
          },
          {
            "type": "empty",
          },
          {
            "type": "comment",
            "value": "Specifies the JVM arguments used for the daemon process.",
          },
          {
            "type": "comment",
            "value": "The setting is particularly useful for tweaking memory settings.",
          },
          {
            "type": "comment",
            "value": "Default value: -Xmx512m -XX:MaxMetaspaceSize=256m",
          },
          {
            "key": "org.gradle.jvmargs",
            "type": "property",
            "value": "-Xmx2048m -XX:MaxMetaspaceSize=512m",
          },
          {
            "type": "empty",
          },
          {
            "type": "comment",
            "value": "When configured, Gradle will run in incubating parallel mode.",
          },
          {
            "type": "comment",
            "value": "This option should only be used with decoupled projects. More details, visit",
          },
          {
            "type": "comment",
            "value": "http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects",
          },
          {
            "type": "comment",
            "value": "org.gradle.parallel=true",
          },
          {
            "type": "empty",
          },
          {
            "type": "comment",
            "value": "AndroidX package structure to make it clearer which packages are bundled with the",
          },
          {
            "type": "comment",
            "value": "Android operating system, and which are packaged with your app's APK",
          },
          {
            "type": "comment",
            "value": "https://developer.android.com/topic/libraries/support-library/androidx-rn",
          },
          {
            "key": "android.useAndroidX",
            "type": "property",
            "value": "true",
          },
          {
            "type": "empty",
          },
          {
            "type": "comment",
            "value": "Automatically convert third-party libraries to use AndroidX",
          },
          {
            "key": "android.enableJetifier",
            "type": "property",
            "value": "true",
          },
          {
            "type": "empty",
          },
          {
            "type": "comment",
            "value": "Use this property to specify which architecture you want to build.",
          },
          {
            "type": "comment",
            "value": "You can also override it from the CLI using",
          },
          {
            "type": "comment",
            "value": "./gradlew <task> -PreactNativeArchitectures=x86_64",
          },
          {
            "key": "reactNativeArchitectures",
            "type": "property",
            "value": "armeabi-v7a,arm64-v8a,x86,x86_64",
          },
          {
            "type": "empty",
          },
          {
            "type": "comment",
            "value": "Use this property to enable support to the new architecture.",
          },
          {
            "type": "comment",
            "value": "This will allow you to use TurboModules and the Fabric render in",
          },
          {
            "type": "comment",
            "value": "your application. You should enable this flag either if you want",
          },
          {
            "type": "comment",
            "value": "to write custom TurboModules/Fabric components OR use libraries that",
          },
          {
            "type": "comment",
            "value": "are providing them.",
          },
          {
            "key": "newArchEnabled",
            "type": "property",
            "value": "false",
          },
          {
            "type": "empty",
          },
          {
            "type": "comment",
            "value": "Use this property to enable or disable the Hermes JS engine.",
          },
          {
            "type": "comment",
            "value": "If set to false, you will be using JSC instead.",
          },
          {
            "key": "hermesEnabled",
            "type": "property",
            "value": "true",
          },
          {
            "type": "empty",
          },
          {
            "type": "comment",
            "value": "Enable GIF support in React Native images (~200 B increase)",
          },
          {
            "key": "expo.gif.enabled",
            "type": "property",
            "value": "true",
          },
          {
            "type": "comment",
            "value": "Enable webp support in React Native images (~85 KB increase)",
          },
          {
            "key": "expo.webp.enabled",
            "type": "property",
            "value": "true",
          },
          {
            "type": "comment",
            "value": "Enable animated webp support (~3.4 MB increase)",
          },
          {
            "type": "comment",
            "value": "Disabled by default because iOS doesn't support animated webp",
          },
          {
            "key": "expo.webp.animated",
            "type": "property",
            "value": "false",
          },
          {
            "type": "empty",
          },
          {
            "type": "comment",
            "value": "Enable network inspector",
          },
          {
            "key": "EX_DEV_CLIENT_NETWORK_INSPECTOR",
            "type": "property",
            "value": "true",
          },
          {
            "type": "empty",
          },
          {
            "type": "comment",
            "value": "Use legacy packaging to compress native libraries in the resulting APK.",
          },
          {
            "key": "expo.useLegacyPackaging",
            "type": "property",
            "value": "false",
          },
          {
            "type": "empty",
          },
        ],
        "manifest": {
          "manifest": {
            "$": {
              "xmlns:android": "http://schemas.android.com/apk/res/android",
              "xmlns:tools": "http://schemas.android.com/tools",
            },
            "application": [
              {
                "$": {
                  "android:allowBackup": "true",
                  "android:icon": "@mipmap/ic_launcher",
                  "android:label": "@string/app_name",
                  "android:name": ".MainApplication",
                  "android:roundIcon": "@mipmap/ic_launcher_round",
                  "android:theme": "@style/AppTheme",
                },
                "activity": [
                  {
                    "$": {
                      "android:configChanges": "keyboard|keyboardHidden|orientation|screenSize|screenLayout|uiMode",
                      "android:exported": "true",
                      "android:launchMode": "singleTask",
                      "android:name": ".MainActivity",
                      "android:screenOrientation": "unspecified",
                      "android:theme": "@style/Theme.App.SplashScreen",
                      "android:windowSoftInputMode": "adjustPan",
                    },
                    "intent-filter": [
                      {
                        "action": [
                          {
                            "$": {
                              "android:name": "android.intent.action.MAIN",
                            },
                          },
                        ],
                        "category": [
                          {
                            "$": {
                              "android:name": "android.intent.category.LAUNCHER",
                            },
                          },
                        ],
                      },
                      {
                        "action": [
                          {
                            "$": {
                              "android:name": "android.intent.action.VIEW",
                            },
                          },
                        ],
                        "category": [
                          {
                            "$": {
                              "android:name": "android.intent.category.DEFAULT",
                            },
                          },
                          {
                            "$": {
                              "android:name": "android.intent.category.BROWSABLE",
                            },
                          },
                        ],
                        "data": [
                          {
                            "$": {
                              "android:scheme": "my-app-redirect",
                            },
                          },
                          {
                            "$": {
                              "android:scheme": "com.bacon.todo",
                            },
                          },
                        ],
                      },
                      {
                        "$": {
                          "android:autoVerify": "true",
                          "data-generated": "true",
                        },
                        "action": [
                          {
                            "$": {
                              "android:name": "android.intent.action.VIEW",
                            },
                          },
                        ],
                        "category": [
                          {
                            "$": {
                              "android:name": "android.intent.category.BROWSABLE",
                            },
                          },
                          {
                            "$": {
                              "android:name": "android.intent.category.DEFAULT",
                            },
                          },
                        ],
                        "data": [
                          {
                            "$": {
                              "android:host": "*.expo.dev",
                              "android:scheme": "https",
                            },
                          },
                        ],
                      },
                    ],
                  },
                  {
                    "$": {
                      "android:exported": "false",
                      "android:name": "com.facebook.react.devsupport.DevSettingsActivity",
                    },
                  },
                ],
                "meta-data": [
                  {
                    "$": {
                      "android:name": "expo.modules.updates.ENABLED",
                      "android:value": "true",
                    },
                  },
                  {
                    "$": {
                      "android:name": "expo.modules.updates.EXPO_UPDATES_CHECK_ON_LAUNCH",
                      "android:value": "NEVER",
                    },
                  },
                  {
                    "$": {
                      "android:name": "expo.modules.updates.EXPO_UPDATES_LAUNCH_WAIT_MS",
                      "android:value": "650",
                    },
                  },
                  {
                    "$": {
                      "android:name": "expo.modules.updates.EXPO_RUNTIME_VERSION",
                      "android:value": "@string/expo_runtime_version",
                    },
                  },
                  {
                    "$": {
                      "android:name": "expo.modules.notifications.default_notification_icon",
                      "android:resource": "@drawable/notification_icon",
                    },
                  },
                  {
                    "$": {
                      "android:name": "expo.modules.notifications.default_notification_color",
                      "android:resource": "@color/notification_icon_color",
                    },
                  },
                  {
                    "$": {
                      "android:name": "com.google.android.gms.ads.APPLICATION_ID",
                      "android:value": "MY_GOOGLE_MOBILE_ADS_APP_ID",
                    },
                  },
                  {
                    "$": {
                      "android:name": "com.google.android.gms.ads.DELAY_APP_MEASUREMENT_INIT",
                      "android:value": "false",
                    },
                  },
                  {
                    "$": {
                      "android:name": "com.google.android.geo.API_KEY",
                      "android:value": "MY_GOOGLE_MAPS_ANDROID_KEY",
                    },
                  },
                ],
                "uses-library": [
                  {
                    "$": {
                      "android:name": "org.apache.http.legacy",
                      "android:required": false,
                    },
                  },
                ],
              },
            ],
            "queries": [
              {
                "intent": [
                  {
                    "action": [
                      {
                        "$": {
                          "android:name": "android.intent.action.VIEW",
                        },
                      },
                    ],
                    "category": [
                      {
                        "$": {
                          "android:name": "android.intent.category.BROWSABLE",
                        },
                      },
                    ],
                    "data": [
                      {
                        "$": {
                          "android:scheme": "https",
                        },
                      },
                    ],
                  },
                ],
              },
            ],
            "uses-permission": [
              {
                "$": {
                  "android:name": "android.permission.INTERNET",
                },
              },
              {
                "$": {
                  "android:name": "android.permission.SYSTEM_ALERT_WINDOW",
                },
              },
              {
                "$": {
                  "android:name": "android.permission.VIBRATE",
                },
              },
              {
                "$": {
                  "android:name": "android.permission.READ_EXTERNAL_STORAGE",
                },
              },
              {
                "$": {
                  "android:name": "android.permission.WRITE_EXTERNAL_STORAGE",
                },
              },
              {
                "$": {
                  "android:name": "android.permission.CAMERA",
                },
              },
              {
                "$": {
                  "android:name": "com.sec.android.provider.badge.permission.WRITE",
                },
              },
              {
                "$": {
                  "android:name": "android.permission.ACCESS_COARSE_LOCATION",
                },
              },
              {
                "$": {
                  "android:name": "android.permission.RECORD_AUDIO",
                  "tools:node": "remove",
                },
              },
              {
                "$": {
                  "android:name": "android.permission.ACCESS_FINE_LOCATION",
                  "tools:node": "remove",
                },
              },
            ],
          },
        },
        "strings": {
          "resources": {
            "string": [
              {
                "$": {
                  "name": "app_name",
                },
                "_": "my cool app",
              },
              {
                "$": {
                  "name": "expo_splash_screen_resize_mode",
                  "translatable": "false",
                },
                "_": "contain",
              },
              {
                "$": {
                  "name": "expo_splash_screen_status_bar_translucent",
                  "translatable": "false",
                },
                "_": "true",
              },
              {
                "$": {
                  "name": "expo_runtime_version",
                },
                "_": "1.0",
              },
            ],
          },
        },
        "styles": {
          "resources": {
            "$": {
              "xmlns:tools": "http://schemas.android.com/tools",
            },
            "style": [
              {
                "$": {
                  "name": "AppTheme",
                  "parent": "Theme.AppCompat.Light.NoActionBar",
                },
                "item": [
                  {
                    "$": {
                      "name": "android:textColor",
                    },
                    "_": "@android:color/black",
                  },
                  {
                    "$": {
                      "name": "android:editTextStyle",
                    },
                    "_": "@style/ResetEditText",
                  },
                  {
                    "$": {
                      "name": "android:editTextBackground",
                    },
                    "_": "@drawable/rn_edit_text_material",
                  },
                  {
                    "$": {
                      "name": "colorPrimary",
                    },
                    "_": "@color/colorPrimary",
                  },
                  {
                    "$": {
                      "name": "android:windowTranslucentStatus",
                    },
                    "_": "true",
                  },
                  {
                    "$": {
                      "name": "colorPrimaryDark",
                    },
                    "_": "@color/colorPrimaryDark",
                  },
                  {
                    "$": {
                      "name": "android:windowLightNavigationBar",
                    },
                    "_": "true",
                  },
                  {
                    "$": {
                      "name": "android:navigationBarColor",
                    },
                    "_": "@color/navigationBarColor",
                  },
                  {
                    "$": {
                      "name": "android:windowBackground",
                    },
                    "_": "@color/activityBackground",
                  },
                ],
              },
              {
                "$": {
                  "name": "ResetEditText",
                  "parent": "@android:style/Widget.EditText",
                },
                "item": [
                  {
                    "$": {
                      "name": "android:padding",
                    },
                    "_": "0dp",
                  },
                  {
                    "$": {
                      "name": "android:textColorHint",
                    },
                    "_": "#c8c8c8",
                  },
                  {
                    "$": {
                      "name": "android:textColor",
                    },
                    "_": "@android:color/black",
                  },
                ],
              },
              {
                "$": {
                  "name": "Theme.App.SplashScreen",
                  "parent": "AppTheme",
                },
                "item": [
                  {
                    "$": {
                      "name": "android:windowBackground",
                    },
                    "_": "@drawable/splashscreen",
                  },
                ],
              },
            ],
          },
        },
      },
      "ios": {
        "entitlements": {
          "com.apple.developer.associated-domains": [
            "applinks:https://pillarvalley.netlify.app",
          ],
          "com.apple.developer.contacts.notes": true,
          "foo": "bar",
        },
        "expoPlist": {
          "EXUpdatesCheckOnLaunch": "NEVER",
          "EXUpdatesEnabled": true,
          "EXUpdatesLaunchWaitMs": 650,
          "EXUpdatesRuntimeVersion": "1.0",
        },
        "infoPlist": {
          "CADisableMinimumFrameDurationOnPhone": true,
          "CFBundleDevelopmentRegion": "$(DEVELOPMENT_LANGUAGE)",
          "CFBundleDisplayName": "my cool app",
          "CFBundleExecutable": "$(EXECUTABLE_NAME)",
          "CFBundleIdentifier": "$(PRODUCT_BUNDLE_IDENTIFIER)",
          "CFBundleInfoDictionaryVersion": "6.0",
          "CFBundleName": "$(PRODUCT_NAME)",
          "CFBundlePackageType": "$(PRODUCT_BUNDLE_PACKAGE_TYPE)",
          "CFBundleShortVersionString": "1.0.0",
          "CFBundleSignature": "????",
          "CFBundleURLTypes": [
            {
              "CFBundleURLSchemes": [
                "my-app-redirect",
                "com.bacon.todo",
              ],
            },
            {
              "CFBundleURLSchemes": [
                "com.googleusercontent.apps.1234567890123-abcdef",
              ],
            },
          ],
          "CFBundleVersion": "6.5.0",
          "GADApplicationIdentifier": "TEST_googleMobileAdsAppId",
          "GMSApiKey": "TEST_googleMapsApiKey",
          "ITSAppUsesNonExemptEncryption": true,
          "LSRequiresIPhoneOS": true,
          "NSAppTransportSecurity": {
            "NSAllowsArbitraryLoads": false,
            "NSAllowsLocalNetworking": true,
          },
          "NSLocationWhenInUseUsageDescription": "Allow $(PRODUCT_NAME) to access your location",
          "UILaunchStoryboardName": "SplashScreen",
          "UIRequiredDeviceCapabilities": [
            "arm64",
          ],
          "UIRequiresFullScreen": true,
          "UIStatusBarStyle": "UIStatusBarStyleDefault",
          "UISupportedInterfaceOrientations": [
            "UIInterfaceOrientationPortrait",
            "UIInterfaceOrientationPortraitUpsideDown",
            "UIInterfaceOrientationLandscapeLeft",
            "UIInterfaceOrientationLandscapeRight",
          ],
          "UIUserInterfaceStyle": "Automatic",
          "UIViewControllerBasedStatusBarAppearance": false,
          "bar": {
            "val": [
              "foo",
            ],
          },
        },
        "podfileProperties": {
          "EX_DEV_CLIENT_NETWORK_INSPECTOR": "true",
          "expo.jsEngine": "hermes",
        },
        "splashScreenStoryboard": {
          "document": {
            "$": {
              "colorMatched": "YES",
              "initialViewController": "EXPO-VIEWCONTROLLER-1",
              "launchScreen": "YES",
              "propertyAccessControl": "none",
              "targetRuntime": "iOS.CocoaTouch",
              "toolsVersion": "16096",
              "type": "com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB",
              "useAutolayout": "YES",
              "useSafeAreas": "YES",
              "useTraitCollections": "YES",
              "version": "3.0",
            },
            "dependencies": [
              {
                "capability": [
                  {
                    "$": {
                      "minToolsVersion": "9.0",
                      "name": "Safe area layout guides",
                    },
                  },
                  {
                    "$": {
                      "minToolsVersion": "8.0",
                      "name": "documents saved in the Xcode 8 format",
                    },
                  },
                ],
                "deployment": [
                  {
                    "$": {
                      "identifier": "iOS",
                    },
                  },
                ],
                "plugIn": [
                  {
                    "$": {
                      "identifier": "com.apple.InterfaceBuilder.IBCocoaTouchPlugin",
                      "version": "16087",
                    },
                  },
                ],
              },
            ],
            "device": [
              {
                "$": {
                  "appearance": "light",
                  "id": "retina5_5",
                  "orientation": "portrait",
                },
              },
            ],
            "resources": [
              {
                "image": [
                  {
                    "$": {
                      "height": "1",
                      "name": "SplashScreenBackground",
                      "width": "1",
                    },
                  },
                ],
              },
            ],
            "scenes": [
              {
                "scene": [
                  {
                    "$": {
                      "sceneID": "EXPO-SCENE-1",
                    },
                    "objects": [
                      {
                        "placeholder": [
                          {
                            "$": {
                              "id": "EXPO-PLACEHOLDER-1",
                              "placeholderIdentifier": "IBFirstResponder",
                              "sceneMemberID": "firstResponder",
                              "userLabel": "First Responder",
                            },
                          },
                        ],
                        "viewController": [
                          {
                            "$": {
                              "id": "EXPO-VIEWCONTROLLER-1",
                              "sceneMemberID": "viewController",
                              "storyboardIdentifier": "SplashScreenViewController",
                            },
                            "view": [
                              {
                                "$": {
                                  "contentMode": "scaleToFill",
                                  "id": "EXPO-ContainerView",
                                  "insetsLayoutMarginsFromSafeArea": "NO",
                                  "key": "view",
                                  "userInteractionEnabled": "NO",
                                  "userLabel": "ContainerView",
                                },
                                "autoresizingMask": [
                                  {
                                    "$": {
                                      "flexibleMaxX": "YES",
                                      "flexibleMaxY": "YES",
                                      "key": "autoresizingMask",
                                    },
                                  },
                                ],
                                "constraints": [
                                  {
                                    "constraint": [
                                      {
                                        "$": {
                                          "firstAttribute": "top",
                                          "firstItem": "EXPO-SplashScreenBackground",
                                          "id": "1gX-mQ-vu6",
                                          "secondAttribute": "top",
                                          "secondItem": "EXPO-ContainerView",
                                        },
                                      },
                                      {
                                        "$": {
                                          "firstAttribute": "leading",
                                          "firstItem": "EXPO-SplashScreenBackground",
                                          "id": "6tX-OG-Sck",
                                          "secondAttribute": "leading",
                                          "secondItem": "EXPO-ContainerView",
                                        },
                                      },
                                      {
                                        "$": {
                                          "firstAttribute": "trailing",
                                          "firstItem": "EXPO-SplashScreenBackground",
                                          "id": "ABX-8g-7v4",
                                          "secondAttribute": "trailing",
                                          "secondItem": "EXPO-ContainerView",
                                        },
                                      },
                                      {
                                        "$": {
                                          "firstAttribute": "bottom",
                                          "firstItem": "EXPO-SplashScreenBackground",
                                          "id": "jkI-2V-eW5",
                                          "secondAttribute": "bottom",
                                          "secondItem": "EXPO-ContainerView",
                                        },
                                      },
                                      {
                                        "$": {
                                          "firstAttribute": "top",
                                          "firstItem": "EXPO-SplashScreen",
                                          "id": "2VS-Uz-0LU",
                                          "secondAttribute": "top",
                                          "secondItem": "EXPO-ContainerView",
                                        },
                                      },
                                      {
                                        "$": {
                                          "firstAttribute": "leading",
                                          "firstItem": "EXPO-SplashScreen",
                                          "id": "LhH-Ei-DKo",
                                          "secondAttribute": "leading",
                                          "secondItem": "EXPO-ContainerView",
                                        },
                                      },
                                      {
                                        "$": {
                                          "firstAttribute": "trailing",
                                          "firstItem": "EXPO-SplashScreen",
                                          "id": "I6l-TP-6fn",
                                          "secondAttribute": "trailing",
                                          "secondItem": "EXPO-ContainerView",
                                        },
                                      },
                                      {
                                        "$": {
                                          "firstAttribute": "bottom",
                                          "firstItem": "EXPO-SplashScreen",
                                          "id": "nbp-HC-eaG",
                                          "secondAttribute": "bottom",
                                          "secondItem": "EXPO-ContainerView",
                                        },
                                      },
                                    ],
                                  },
                                ],
                                "rect": [
                                  {
                                    "$": {
                                      "height": "736",
                                      "key": "frame",
                                      "width": "414",
                                      "x": "0.0",
                                      "y": "0.0",
                                    },
                                  },
                                ],
                                "subviews": [
                                  {
                                    "imageView": [
                                      {
                                        "$": {
                                          "contentMode": "scaleAspectFill",
                                          "horizontalHuggingPriority": "251",
                                          "id": "EXPO-SplashScreenBackground",
                                          "image": "SplashScreenBackground",
                                          "insetsLayoutMarginsFromSafeArea": "NO",
                                          "translatesAutoresizingMaskIntoConstraints": "NO",
                                          "userInteractionEnabled": "NO",
                                          "userLabel": "SplashScreenBackground",
                                          "verticalHuggingPriority": "251",
                                        },
                                        "rect": [
                                          {
                                            "$": {
                                              "height": "736",
                                              "key": "frame",
                                              "width": "414",
                                              "x": "0.0",
                                              "y": "0.0",
                                            },
                                          },
                                        ],
                                      },
                                    ],
                                  },
                                ],
                                "viewLayoutGuide": [
                                  {
                                    "$": {
                                      "id": "Rmq-lb-GrQ",
                                      "key": "safeArea",
                                    },
                                  },
                                ],
                              },
                            ],
                          },
                        ],
                      },
                    ],
                    "point": [
                      {
                        "$": {
                          "key": "canvasLocation",
                          "x": "140.625",
                          "y": "129.4921875",
                        },
                      },
                    ],
                  },
                ],
              },
            ],
          },
        },
      },
    },
    "pluginHistory": {
      "expo-ads-admob": {
        "name": "expo-ads-admob",
        "version": "UNVERSIONED",
      },
      "expo-apple-authentication": {
        "name": "expo-apple-authentication",
        "version": "UNVERSIONED",
      },
      "expo-contacts": {
        "name": "expo-contacts",
        "version": "UNVERSIONED",
      },
      "expo-document-picker": {
        "name": "expo-document-picker",
        "version": "UNVERSIONED",
      },
      "expo-navigation-bar": {
        "name": "expo-navigation-bar",
        "version": "UNVERSIONED",
      },
      "expo-notifications": {
        "name": "expo-notifications",
        "version": "UNVERSIONED",
      },
      "expo-splash-screen": {
        "name": "expo-splash-screen",
        "version": "UNVERSIONED",
      },
      "expo-system-ui": {
        "name": "expo-system-ui",
        "version": "UNVERSIONED",
      },
      "expo-updates": {
        "name": "expo-updates",
        "version": "UNVERSIONED",
      },
      "react-native-maps": {
        "name": "react-native-maps",
        "version": "UNVERSIONED",
      },
    },
    "projectRoot": "/app",
  },
  "android": {
    "adaptiveIcon": {
      "backgroundImage": "./icons/background.png",
      "foregroundImage": "./icons/foreground.png",
    },
    "allowBackup": true,
    "backgroundColor": "#ff0000",
    "blockedPermissions": [
      "android.permission.RECORD_AUDIO",
      "android.permission.ACCESS_FINE_LOCATION",
    ],
    "config": {
      "branch": {
        "apiKey": "MY_BRANCH_ANDROID_KEY",
      },
      "googleMaps": {
        "apiKey": "MY_GOOGLE_MAPS_ANDROID_KEY",
      },
      "googleMobileAdsAppId": "MY_GOOGLE_MOBILE_ADS_APP_ID",
      "googleMobileAdsAutoInit": true,
    },
    "googleServicesFile": "./config/google-services.json",
    "intentFilters": [
      {
        "action": "VIEW",
        "autoVerify": true,
        "category": [
          "BROWSABLE",
          "DEFAULT",
        ],
        "data": {
          "host": "*.expo.dev",
          "scheme": "https",
        },
      },
    ],
    "package": "com.bacon.todo",
    "permissions": [
      "android.permission.CAMERA",
      "com.sec.android.provider.badge.permission.WRITE",
      "android.permission.ACCESS_COARSE_LOCATION",
    ],
    "softwareKeyboardLayoutMode": "pan",
    "splash": {
      "backgroundColor": "#ff00ff",
      "dark": {
        "backgroundColor": "#00ffff",
      },
    },
    "userInterfaceStyle": "light",
    "versionCode": 6,
  },
  "androidNavigationBar": {
    "backgroundColor": "#ff0000",
    "barStyle": "dark-content",
    "visible": "sticky-immersive",
  },
  "androidStatusBar": {
    "backgroundColor": "#000FFF",
    "barStyle": "light-content",
    "hidden": false,
    "translucent": true,
  },
  "backgroundColor": "orange",
  "description": "my app is great because it uses expo",
  "developmentClient": {
    "silentLaunch": true,
  },
  "facebookAdvertiserIDCollectionEnabled": true,
  "facebookAppId": "1234567890",
  "facebookAutoInitEnabled": true,
  "facebookAutoLogAppEventsEnabled": true,
  "facebookDisplayName": "my-fb-test-app",
  "facebookScheme": "fb1234567890",
  "githubUrl": "https://github.com/expo/expo",
  "ios": {
    "accessesContactNotes": true,
    "appStoreUrl": "https://itunes.apple.com/us/app/pillar-valley/id1336398804?ls=1&mt=8",
    "associatedDomains": [
      "applinks:https://pillarvalley.netlify.app",
    ],
    "backgroundColor": "#ff0000",
    "buildNumber": "6.5.0",
    "bundleIdentifier": "com.bacon.todo",
    "config": {
      "googleMapsApiKey": "TEST_googleMapsApiKey",
      "googleMobileAdsAppId": "TEST_googleMobileAdsAppId",
      "googleMobileAdsAutoInit": true,
      "usesNonExemptEncryption": true,
    },
    "entitlements": {
      "com.apple.developer.associated-domains": [
        "applinks:https://pillarvalley.netlify.app",
      ],
      "com.apple.developer.contacts.notes": true,
      "foo": "bar",
    },
    "googleServicesFile": "./config/GoogleService-Info.plist",
    "infoPlist": {
      "CADisableMinimumFrameDurationOnPhone": true,
      "CFBundleDevelopmentRegion": "$(DEVELOPMENT_LANGUAGE)",
      "CFBundleDisplayName": "my cool app",
      "CFBundleExecutable": "$(EXECUTABLE_NAME)",
      "CFBundleIdentifier": "$(PRODUCT_BUNDLE_IDENTIFIER)",
      "CFBundleInfoDictionaryVersion": "6.0",
      "CFBundleName": "$(PRODUCT_NAME)",
      "CFBundlePackageType": "$(PRODUCT_BUNDLE_PACKAGE_TYPE)",
      "CFBundleShortVersionString": "1.0.0",
      "CFBundleSignature": "????",
      "CFBundleURLTypes": [
        {
          "CFBundleURLSchemes": [
            "my-app-redirect",
            "com.bacon.todo",
          ],
        },
        {
          "CFBundleURLSchemes": [
            "com.googleusercontent.apps.1234567890123-abcdef",
          ],
        },
      ],
      "CFBundleVersion": "6.5.0",
      "GADApplicationIdentifier": "TEST_googleMobileAdsAppId",
      "GMSApiKey": "TEST_googleMapsApiKey",
      "ITSAppUsesNonExemptEncryption": true,
      "LSRequiresIPhoneOS": true,
      "NSAppTransportSecurity": {
        "NSAllowsArbitraryLoads": false,
        "NSAllowsLocalNetworking": true,
      },
      "NSLocationWhenInUseUsageDescription": "Allow $(PRODUCT_NAME) to access your location",
      "UILaunchStoryboardName": "SplashScreen",
      "UIRequiredDeviceCapabilities": [
        "arm64",
      ],
      "UIRequiresFullScreen": true,
      "UIStatusBarStyle": "UIStatusBarStyleDefault",
      "UISupportedInterfaceOrientations": [
        "UIInterfaceOrientationPortrait",
        "UIInterfaceOrientationPortraitUpsideDown",
        "UIInterfaceOrientationLandscapeLeft",
        "UIInterfaceOrientationLandscapeRight",
      ],
      "UIUserInterfaceStyle": "Automatic",
      "UIViewControllerBasedStatusBarAppearance": false,
      "bar": {
        "val": [
          "foo",
        ],
      },
    },
    "isTabletOnly": false,
    "requireFullScreen": true,
    "supportsTablet": true,
    "userInterfaceStyle": "automatic",
    "usesAppleSignIn": true,
    "usesIcloudStorage": true,
  },
  "locales": {
    "en": "./locales/en-US.json",
    "es": {
      "foo": "el bar",
    },
  },
  "name": "my cool app",
  "notification": {
    "androidCollapsedTitle": "#{unread_notifications} new interactions",
    "androidMode": "collapse",
    "color": "green",
    "icon": "./icons/notification-icon.png",
    "iosDisplayInForeground": true,
  },
  "orientation": "default",
  "packagerOpts": {
    "extraThing": true,
  },
  "platforms": [
    "android",
    "ios",
    "web",
  ],
  "primaryColor": "#fff000",
  "runtimeVersion": "1.0",
  "scheme": "my-app-redirect",
  "slug": "mycoolapp",
  "splash": {
    "backgroundColor": "#ff00ff",
  },
  "updates": {
    "checkAutomatically": "ON_ERROR_RECOVERY",
    "enabled": true,
    "fallbackToCacheTimeout": 650,
  },
  "userInterfaceStyle": "dark",
  "version": "1.0.0",
}
`;

exports[`built-in plugins introspects mods in a managed project 1`] = `
{
  "_internal": {
    "modResults": {
      "android": {
        "colors": {
          "resources": {
            "color": [
              {
                "$": {
                  "name": "colorPrimary",
                },
                "_": "#fff000",
              },
              {
                "$": {
                  "name": "colorPrimaryDark",
                },
                "_": "#000FFF",
              },
              {
                "$": {
                  "name": "navigationBarColor",
                },
                "_": "#ff0000",
              },
              {
                "$": {
                  "name": "splashscreen_background",
                },
                "_": "#ff00ff",
              },
              {
                "$": {
                  "name": "activityBackground",
                },
                "_": "#ff0000",
              },
              {
                "$": {
                  "name": "notification_icon_color",
                },
                "_": "green",
              },
            ],
          },
        },
        "colorsNight": {
          "resources": {
            "color": [
              {
                "$": {
                  "name": "splashscreen_background",
                },
                "_": "#00ffff",
              },
            ],
          },
        },
        "gradleProperties": [
          {
            "key": "hermesEnabled",
            "type": "property",
            "value": "true",
          },
        ],
        "manifest": {
          "manifest": {
            "$": {
              "package": "com.bacon.todo",
              "xmlns:android": "http://schemas.android.com/apk/res/android",
              "xmlns:tools": "http://schemas.android.com/tools",
            },
            "application": [
              {
                "$": {
                  "android:allowBackup": "true",
                  "android:icon": "@mipmap/ic_launcher",
                  "android:label": "@string/app_name",
                  "android:name": ".MainApplication",
                  "android:roundIcon": "@mipmap/ic_launcher_round",
                  "android:theme": "@style/AppTheme",
                  "android:usesCleartextTraffic": "true",
                },
                "activity": [
                  {
                    "$": {
                      "android:configChanges": "keyboard|keyboardHidden|orientation|screenSize|uiMode",
                      "android:label": "@string/app_name",
                      "android:launchMode": "singleTask",
                      "android:name": ".MainActivity",
                      "android:screenOrientation": "unspecified",
                      "android:theme": "@style/Theme.App.SplashScreen",
                      "android:windowSoftInputMode": "adjustPan",
                    },
                    "intent-filter": [
                      {
                        "action": [
                          {
                            "$": {
                              "android:name": "android.intent.action.MAIN",
                            },
                          },
                        ],
                        "category": [
                          {
                            "$": {
                              "android:name": "android.intent.category.LAUNCHER",
                            },
                          },
                        ],
                      },
                      {
                        "action": [
                          {
                            "$": {
                              "android:name": "android.intent.action.VIEW",
                            },
                          },
                        ],
                        "category": [
                          {
                            "$": {
                              "android:name": "android.intent.category.DEFAULT",
                            },
                          },
                          {
                            "$": {
                              "android:name": "android.intent.category.BROWSABLE",
                            },
                          },
                        ],
                        "data": [
                          {
                            "$": {
                              "android:scheme": "my-app-redirect",
                            },
                          },
                          {
                            "$": {
                              "android:scheme": "com.bacon.todo",
                            },
                          },
                        ],
                      },
                      {
                        "$": {
                          "android:autoVerify": "true",
                          "data-generated": "true",
                        },
                        "action": [
                          {
                            "$": {
                              "android:name": "android.intent.action.VIEW",
                            },
                          },
                        ],
                        "category": [
                          {
                            "$": {
                              "android:name": "android.intent.category.BROWSABLE",
                            },
                          },
                          {
                            "$": {
                              "android:name": "android.intent.category.DEFAULT",
                            },
                          },
                        ],
                        "data": [
                          {
                            "$": {
                              "android:host": "*.expo.dev",
                              "android:scheme": "https",
                            },
                          },
                        ],
                      },
                    ],
                  },
                  {
                    "$": {
                      "android:name": "com.facebook.react.devsupport.DevSettingsActivity",
                    },
                  },
                ],
                "meta-data": [
                  {
                    "$": {
                      "android:name": "expo.modules.updates.EXPO_RUNTIME_VERSION",
                      "android:value": "@string/expo_runtime_version",
                    },
                  },
                  {
                    "$": {
                      "android:name": "expo.modules.updates.ENABLED",
                      "android:value": "true",
                    },
                  },
                  {
                    "$": {
                      "android:name": "expo.modules.updates.EXPO_UPDATES_CHECK_ON_LAUNCH",
                      "android:value": "NEVER",
                    },
                  },
                  {
                    "$": {
                      "android:name": "expo.modules.updates.EXPO_UPDATES_LAUNCH_WAIT_MS",
                      "android:value": "650",
                    },
                  },
                  {
                    "$": {
                      "android:name": "expo.modules.notifications.default_notification_icon",
                      "android:resource": "@drawable/notification_icon",
                    },
                  },
                  {
                    "$": {
                      "android:name": "expo.modules.notifications.default_notification_color",
                      "android:resource": "@color/notification_icon_color",
                    },
                  },
                  {
                    "$": {
                      "android:name": "com.google.android.gms.ads.APPLICATION_ID",
                      "android:value": "MY_GOOGLE_MOBILE_ADS_APP_ID",
                    },
                  },
                  {
                    "$": {
                      "android:name": "com.google.android.gms.ads.DELAY_APP_MEASUREMENT_INIT",
                      "android:value": "false",
                    },
                  },
                  {
                    "$": {
                      "android:name": "com.google.android.geo.API_KEY",
                      "android:value": "MY_GOOGLE_MAPS_ANDROID_KEY",
                    },
                  },
                ],
                "uses-library": [
                  {
                    "$": {
                      "android:name": "org.apache.http.legacy",
                      "android:required": false,
                    },
                  },
                ],
              },
            ],
            "queries": [
              {
                "intent": [
                  {
                    "action": [
                      {
                        "$": {
                          "android:name": "android.intent.action.VIEW",
                        },
                      },
                    ],
                    "category": [
                      {
                        "$": {
                          "android:name": "android.intent.category.BROWSABLE",
                        },
                      },
                    ],
                    "data": [
                      {
                        "$": {
                          "android:scheme": "https",
                        },
                      },
                    ],
                  },
                ],
              },
            ],
            "uses-permission": [
              {
                "$": {
                  "android:name": "android.permission.INTERNET",
                },
              },
              {
                "$": {
                  "android:name": "android.permission.SYSTEM_ALERT_WINDOW",
                },
              },
              {
                "$": {
                  "android:name": "android.permission.READ_EXTERNAL_STORAGE",
                },
              },
              {
                "$": {
                  "android:name": "android.permission.WRITE_EXTERNAL_STORAGE",
                },
              },
              {
                "$": {
                  "android:name": "android.permission.CAMERA",
                },
              },
              {
                "$": {
                  "android:name": "com.sec.android.provider.badge.permission.WRITE",
                },
              },
              {
                "$": {
                  "android:name": "android.permission.ACCESS_COARSE_LOCATION",
                },
              },
              {
                "$": {
                  "android:name": "android.permission.RECORD_AUDIO",
                  "tools:node": "remove",
                },
              },
              {
                "$": {
                  "android:name": "android.permission.ACCESS_FINE_LOCATION",
                  "tools:node": "remove",
                },
              },
            ],
          },
        },
        "strings": {
          "resources": {
            "string": [
              {
                "$": {
                  "name": "app_name",
                },
                "_": "my cool app",
              },
              {
                "$": {
                  "name": "expo_splash_screen_resize_mode",
                  "translatable": "false",
                },
                "_": "contain",
              },
              {
                "$": {
                  "name": "expo_splash_screen_status_bar_translucent",
                  "translatable": "false",
                },
                "_": "true",
              },
              {
                "$": {
                  "name": "expo_runtime_version",
                },
                "_": "1.0",
              },
            ],
          },
        },
        "styles": {
          "resources": {
            "$": {
              "xmlns:tools": "http://schemas.android.com/tools",
            },
            "style": [
              {
                "$": {
                  "name": "AppTheme",
                  "parent": "Theme.AppCompat.Light.NoActionBar",
                },
                "item": [
                  {
                    "$": {
                      "name": "colorPrimary",
                    },
                    "_": "@color/colorPrimary",
                  },
                  {
                    "$": {
                      "name": "android:windowTranslucentStatus",
                    },
                    "_": "true",
                  },
                  {
                    "$": {
                      "name": "colorPrimaryDark",
                    },
                    "_": "@color/colorPrimaryDark",
                  },
                  {
                    "$": {
                      "name": "android:windowLightNavigationBar",
                    },
                    "_": "true",
                  },
                  {
                    "$": {
                      "name": "android:navigationBarColor",
                    },
                    "_": "@color/navigationBarColor",
                  },
                  {
                    "$": {
                      "name": "android:windowBackground",
                    },
                    "_": "@color/activityBackground",
                  },
                ],
              },
              {
                "$": {
                  "name": "Theme.App.SplashScreen",
                  "parent": "AppTheme",
                },
                "item": [
                  {
                    "$": {
                      "name": "android:windowBackground",
                    },
                    "_": "@drawable/splashscreen",
                  },
                ],
              },
            ],
          },
        },
      },
      "ios": {
        "entitlements": {
          "com.apple.developer.associated-domains": [
            "applinks:https://pillarvalley.netlify.app",
          ],
          "com.apple.developer.contacts.notes": true,
          "foo": "bar",
        },
        "expoPlist": {
          "EXUpdatesCheckOnLaunch": "NEVER",
          "EXUpdatesEnabled": true,
          "EXUpdatesLaunchWaitMs": 650,
          "EXUpdatesRuntimeVersion": "1.0",
        },
        "infoPlist": {
          "CADisableMinimumFrameDurationOnPhone": true,
          "CFBundleDevelopmentRegion": "$(DEVELOPMENT_LANGUAGE)",
          "CFBundleDisplayName": "my cool app",
          "CFBundleExecutable": "$(EXECUTABLE_NAME)",
          "CFBundleIdentifier": "$(PRODUCT_BUNDLE_IDENTIFIER)",
          "CFBundleInfoDictionaryVersion": "6.0",
          "CFBundleName": "$(PRODUCT_NAME)",
          "CFBundlePackageType": "$(PRODUCT_BUNDLE_PACKAGE_TYPE)",
          "CFBundleShortVersionString": "1.0.0",
          "CFBundleSignature": "????",
          "CFBundleURLTypes": [
            {
              "CFBundleURLSchemes": [
                "my-app-redirect",
                "com.bacon.todo",
              ],
            },
            {
              "CFBundleURLSchemes": [
                "com.googleusercontent.apps.1234567890123-abcdef",
              ],
            },
          ],
          "CFBundleVersion": "6.5.0",
          "GADApplicationIdentifier": "TEST_googleMobileAdsAppId",
          "GMSApiKey": "TEST_googleMapsApiKey",
          "ITSAppUsesNonExemptEncryption": true,
          "LSRequiresIPhoneOS": true,
          "NSAppTransportSecurity": {
            "NSAllowsArbitraryLoads": true,
            "NSExceptionDomains": {
              "localhost": {
                "NSExceptionAllowsInsecureHTTPLoads": true,
              },
            },
          },
          "NSLocationWhenInUseUsageDescription": "Allow $(PRODUCT_NAME) to access your location",
          "UILaunchStoryboardName": "SplashScreen",
          "UIRequiredDeviceCapabilities": [
            "armv7",
          ],
          "UIRequiresFullScreen": true,
          "UIStatusBarStyle": "UIStatusBarStyleDefault",
          "UISupportedInterfaceOrientations": [
            "UIInterfaceOrientationPortrait",
            "UIInterfaceOrientationPortraitUpsideDown",
            "UIInterfaceOrientationLandscapeLeft",
            "UIInterfaceOrientationLandscapeRight",
          ],
          "UIUserInterfaceStyle": "Automatic",
          "UIViewControllerBasedStatusBarAppearance": false,
          "bar": {
            "val": [
              "foo",
            ],
          },
        },
        "podfileProperties": {
          "expo.jsEngine": "hermes",
        },
        "splashScreenStoryboard": {
          "document": {
            "$": {
              "colorMatched": "YES",
              "initialViewController": "EXPO-VIEWCONTROLLER-1",
              "launchScreen": "YES",
              "propertyAccessControl": "none",
              "targetRuntime": "iOS.CocoaTouch",
              "toolsVersion": "16096",
              "type": "com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB",
              "useAutolayout": "YES",
              "useSafeAreas": "YES",
              "useTraitCollections": "YES",
              "version": "3.0",
            },
            "dependencies": [
              {
                "capability": [
                  {
                    "$": {
                      "minToolsVersion": "9.0",
                      "name": "Safe area layout guides",
                    },
                  },
                  {
                    "$": {
                      "minToolsVersion": "8.0",
                      "name": "documents saved in the Xcode 8 format",
                    },
                  },
                ],
                "deployment": [
                  {
                    "$": {
                      "identifier": "iOS",
                    },
                  },
                ],
                "plugIn": [
                  {
                    "$": {
                      "identifier": "com.apple.InterfaceBuilder.IBCocoaTouchPlugin",
                      "version": "16087",
                    },
                  },
                ],
              },
            ],
            "resources": [
              {
                "image": [
                  {
                    "$": {
                      "height": "1",
                      "name": "SplashScreenBackground",
                      "width": "1",
                    },
                  },
                ],
              },
            ],
            "scenes": [
              {
                "scene": [
                  {
                    "$": {
                      "sceneID": "EXPO-SCENE-1",
                    },
                    "objects": [
                      {
                        "placeholder": [
                          {
                            "$": {
                              "id": "EXPO-PLACEHOLDER-1",
                              "placeholderIdentifier": "IBFirstResponder",
                              "sceneMemberID": "firstResponder",
                              "userLabel": "First Responder",
                            },
                          },
                        ],
                        "viewController": [
                          {
                            "$": {
                              "id": "EXPO-VIEWCONTROLLER-1",
                              "sceneMemberID": "viewController",
                              "storyboardIdentifier": "SplashScreenViewController",
                            },
                            "view": [
                              {
                                "$": {
                                  "contentMode": "scaleToFill",
                                  "id": "EXPO-ContainerView",
                                  "insetsLayoutMarginsFromSafeArea": "NO",
                                  "key": "view",
                                  "userInteractionEnabled": "NO",
                                  "userLabel": "ContainerView",
                                },
                                "autoresizingMask": [
                                  {
                                    "$": {
                                      "flexibleMaxX": "YES",
                                      "flexibleMaxY": "YES",
                                      "key": "autoresizingMask",
                                    },
                                  },
                                ],
                                "color": [
                                  {
                                    "$": {
                                      "key": "backgroundColor",
                                      "systemColor": "systemBackgroundColor",
                                    },
                                  },
                                ],
                                "constraints": [
                                  {
                                    "constraint": [
                                      {
                                        "$": {
                                          "firstAttribute": "top",
                                          "firstItem": "EXPO-SplashScreenBackground",
                                          "id": "1gX-mQ-vu6",
                                          "secondAttribute": "top",
                                          "secondItem": "EXPO-ContainerView",
                                        },
                                      },
                                      {
                                        "$": {
                                          "firstAttribute": "leading",
                                          "firstItem": "EXPO-SplashScreenBackground",
                                          "id": "6tX-OG-Sck",
                                          "secondAttribute": "leading",
                                          "secondItem": "EXPO-ContainerView",
                                        },
                                      },
                                      {
                                        "$": {
                                          "firstAttribute": "trailing",
                                          "firstItem": "EXPO-SplashScreenBackground",
                                          "id": "ABX-8g-7v4",
                                          "secondAttribute": "trailing",
                                          "secondItem": "EXPO-ContainerView",
                                        },
                                      },
                                      {
                                        "$": {
                                          "firstAttribute": "bottom",
                                          "firstItem": "EXPO-SplashScreenBackground",
                                          "id": "jkI-2V-eW5",
                                          "secondAttribute": "bottom",
                                          "secondItem": "EXPO-ContainerView",
                                        },
                                      },
                                    ],
                                  },
                                ],
                                "rect": [
                                  {
                                    "$": {
                                      "height": "736",
                                      "key": "frame",
                                      "width": "414",
                                      "x": "0.0",
                                      "y": "0.0",
                                    },
                                  },
                                ],
                                "subviews": [
                                  {
                                    "imageView": [
                                      {
                                        "$": {
                                          "contentMode": "scaleAspectFill",
                                          "horizontalHuggingPriority": "251",
                                          "id": "EXPO-SplashScreenBackground",
                                          "image": "SplashScreenBackground",
                                          "insetsLayoutMarginsFromSafeArea": "NO",
                                          "translatesAutoresizingMaskIntoConstraints": "NO",
                                          "userInteractionEnabled": "NO",
                                          "userLabel": "SplashScreenBackground",
                                          "verticalHuggingPriority": "251",
                                        },
                                        "rect": [
                                          {
                                            "$": {
                                              "height": "736",
                                              "key": "frame",
                                              "width": "414",
                                              "x": "0.0",
                                              "y": "0.0",
                                            },
                                          },
                                        ],
                                      },
                                    ],
                                  },
                                ],
                                "viewLayoutGuide": [
                                  {
                                    "$": {
                                      "id": "EXPO-SafeArea",
                                      "key": "safeArea",
                                    },
                                  },
                                ],
                              },
                            ],
                          },
                        ],
                      },
                    ],
                  },
                ],
              },
            ],
          },
        },
      },
    },
    "pluginHistory": {
      "expo-ads-admob": {
        "name": "expo-ads-admob",
        "version": "UNVERSIONED",
      },
      "expo-apple-authentication": {
        "name": "expo-apple-authentication",
        "version": "UNVERSIONED",
      },
      "expo-contacts": {
        "name": "expo-contacts",
        "version": "UNVERSIONED",
      },
      "expo-document-picker": {
        "name": "expo-document-picker",
        "version": "UNVERSIONED",
      },
      "expo-navigation-bar": {
        "name": "expo-navigation-bar",
        "version": "UNVERSIONED",
      },
      "expo-notifications": {
        "name": "expo-notifications",
        "version": "UNVERSIONED",
      },
      "expo-splash-screen": {
        "name": "expo-splash-screen",
        "version": "UNVERSIONED",
      },
      "expo-system-ui": {
        "name": "expo-system-ui",
        "version": "UNVERSIONED",
      },
      "expo-updates": {
        "name": "expo-updates",
        "version": "UNVERSIONED",
      },
      "react-native-maps": {
        "name": "react-native-maps",
        "version": "UNVERSIONED",
      },
    },
    "projectRoot": "/app",
  },
  "android": {
    "adaptiveIcon": {
      "backgroundImage": "./icons/background.png",
      "foregroundImage": "./icons/foreground.png",
    },
    "allowBackup": true,
    "backgroundColor": "#ff0000",
    "blockedPermissions": [
      "android.permission.RECORD_AUDIO",
      "android.permission.ACCESS_FINE_LOCATION",
    ],
    "config": {
      "branch": {
        "apiKey": "MY_BRANCH_ANDROID_KEY",
      },
      "googleMaps": {
        "apiKey": "MY_GOOGLE_MAPS_ANDROID_KEY",
      },
      "googleMobileAdsAppId": "MY_GOOGLE_MOBILE_ADS_APP_ID",
      "googleMobileAdsAutoInit": true,
    },
    "googleServicesFile": "./config/google-services.json",
    "intentFilters": [
      {
        "action": "VIEW",
        "autoVerify": true,
        "category": [
          "BROWSABLE",
          "DEFAULT",
        ],
        "data": {
          "host": "*.expo.dev",
          "scheme": "https",
        },
      },
    ],
    "package": "com.bacon.todo",
    "permissions": [
      "android.permission.CAMERA",
      "com.sec.android.provider.badge.permission.WRITE",
      "android.permission.ACCESS_COARSE_LOCATION",
    ],
    "softwareKeyboardLayoutMode": "pan",
    "splash": {
      "backgroundColor": "#ff00ff",
      "dark": {
        "backgroundColor": "#00ffff",
      },
    },
    "userInterfaceStyle": "light",
    "versionCode": 6,
  },
  "androidNavigationBar": {
    "backgroundColor": "#ff0000",
    "barStyle": "dark-content",
    "visible": "sticky-immersive",
  },
  "androidStatusBar": {
    "backgroundColor": "#000FFF",
    "barStyle": "light-content",
    "hidden": false,
    "translucent": true,
  },
  "backgroundColor": "orange",
  "description": "my app is great because it uses expo",
  "developmentClient": {
    "silentLaunch": true,
  },
  "facebookAdvertiserIDCollectionEnabled": true,
  "facebookAppId": "1234567890",
  "facebookAutoInitEnabled": true,
  "facebookAutoLogAppEventsEnabled": true,
  "facebookDisplayName": "my-fb-test-app",
  "facebookScheme": "fb1234567890",
  "githubUrl": "https://github.com/expo/expo",
  "ios": {
    "accessesContactNotes": true,
    "appStoreUrl": "https://itunes.apple.com/us/app/pillar-valley/id1336398804?ls=1&mt=8",
    "associatedDomains": [
      "applinks:https://pillarvalley.netlify.app",
    ],
    "backgroundColor": "#ff0000",
    "buildNumber": "6.5.0",
    "bundleIdentifier": "com.bacon.todo",
    "config": {
      "googleMapsApiKey": "TEST_googleMapsApiKey",
      "googleMobileAdsAppId": "TEST_googleMobileAdsAppId",
      "googleMobileAdsAutoInit": true,
      "usesNonExemptEncryption": true,
    },
    "entitlements": {
      "com.apple.developer.associated-domains": [
        "applinks:https://pillarvalley.netlify.app",
      ],
      "com.apple.developer.contacts.notes": true,
      "foo": "bar",
    },
    "googleServicesFile": "./config/GoogleService-Info.plist",
    "infoPlist": {
      "CADisableMinimumFrameDurationOnPhone": true,
      "CFBundleDevelopmentRegion": "$(DEVELOPMENT_LANGUAGE)",
      "CFBundleDisplayName": "my cool app",
      "CFBundleExecutable": "$(EXECUTABLE_NAME)",
      "CFBundleIdentifier": "$(PRODUCT_BUNDLE_IDENTIFIER)",
      "CFBundleInfoDictionaryVersion": "6.0",
      "CFBundleName": "$(PRODUCT_NAME)",
      "CFBundlePackageType": "$(PRODUCT_BUNDLE_PACKAGE_TYPE)",
      "CFBundleShortVersionString": "1.0.0",
      "CFBundleSignature": "????",
      "CFBundleURLTypes": [
        {
          "CFBundleURLSchemes": [
            "my-app-redirect",
            "com.bacon.todo",
          ],
        },
        {
          "CFBundleURLSchemes": [
            "com.googleusercontent.apps.1234567890123-abcdef",
          ],
        },
      ],
      "CFBundleVersion": "6.5.0",
      "GADApplicationIdentifier": "TEST_googleMobileAdsAppId",
      "GMSApiKey": "TEST_googleMapsApiKey",
      "ITSAppUsesNonExemptEncryption": true,
      "LSRequiresIPhoneOS": true,
      "NSAppTransportSecurity": {
        "NSAllowsArbitraryLoads": true,
        "NSExceptionDomains": {
          "localhost": {
            "NSExceptionAllowsInsecureHTTPLoads": true,
          },
        },
      },
      "NSLocationWhenInUseUsageDescription": "Allow $(PRODUCT_NAME) to access your location",
      "UILaunchStoryboardName": "SplashScreen",
      "UIRequiredDeviceCapabilities": [
        "armv7",
      ],
      "UIRequiresFullScreen": true,
      "UIStatusBarStyle": "UIStatusBarStyleDefault",
      "UISupportedInterfaceOrientations": [
        "UIInterfaceOrientationPortrait",
        "UIInterfaceOrientationPortraitUpsideDown",
        "UIInterfaceOrientationLandscapeLeft",
        "UIInterfaceOrientationLandscapeRight",
      ],
      "UIUserInterfaceStyle": "Automatic",
      "UIViewControllerBasedStatusBarAppearance": false,
      "bar": {
        "val": [
          "foo",
        ],
      },
    },
    "isTabletOnly": false,
    "requireFullScreen": true,
    "supportsTablet": true,
    "userInterfaceStyle": "automatic",
    "usesAppleSignIn": true,
    "usesIcloudStorage": true,
  },
  "locales": {
    "en": "./locales/en-US.json",
    "es": {
      "foo": "el bar",
    },
  },
  "name": "my cool app",
  "notification": {
    "androidCollapsedTitle": "#{unread_notifications} new interactions",
    "androidMode": "collapse",
    "color": "green",
    "icon": "./icons/notification-icon.png",
    "iosDisplayInForeground": true,
  },
  "orientation": "default",
  "packagerOpts": {
    "extraThing": true,
  },
  "platforms": [
    "android",
    "ios",
    "web",
  ],
  "primaryColor": "#fff000",
  "runtimeVersion": "1.0",
  "scheme": "my-app-redirect",
  "slug": "mycoolapp",
  "splash": {
    "backgroundColor": "#ff00ff",
  },
  "updates": {
    "checkAutomatically": "ON_ERROR_RECOVERY",
    "enabled": true,
    "fallbackToCacheTimeout": 650,
  },
  "userInterfaceStyle": "dark",
  "version": "1.0.0",
}
`;
